[project]
name = "comfyui-if_ai_parlerttsnode"
description = "Parler TTS is a zeroshot voice synthesis with emotion and entonations, you can control the voice style via text prompt"
version = "1.0.1"
license = { file = "MIT License" }

[project.urls]
Repository = "https://github.com/if-ai/ComfyUI-IF_AI_ParlerTTSNode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "impactframes"
DisplayName = "IF_ParlerTTSNode"
Icon = "https://impactframes.ai/System/Icons/48x48/if.png"
